--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,6 @@
 body {
-    background-image:url('chrome-extension://__MSG_@@extension_id__/images/1.png');
-    background-size: 100%;
-    height: 2000vh;
+  background-image: url("/images/1.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
