--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
+
 #background {
   background-repeat: no-repeat;
   background-attachment: fixed;
