--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -38,7 +38,12 @@
   flex-basis: auto;
   display: grid;
   grid-template-columns: repeat(4, minmax(0, 1fr));
-  column-gap: 20px;
+  gap: 40px;
+}
+
+#customsearch {
+  display: flex;
+  flex-direction: row;
 }
 
 .container {
@@ -49,8 +54,6 @@
   transition: all 0.1s ease-in-out;
   filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03))
     drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
-  margin-inline: 1vw;
-  margin-block-end: 4vh;
 }
 
 .container:hover {
@@ -72,8 +75,67 @@
 }
 
 .imagenode {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.imagecontainer {
   height: 100px;
   width: 100px;
   padding-inline: 30px;
   padding-block-start: 20px;
+}
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: #ffffff00;
+  color: #ffffff8e;
+  font-size: 24px;
+  width: 100%;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  flex-basis: auto;
+  margin-right: 20px;
+  height: 30px;
+}
+
+.dropdown-content {
+  border-radius: 0.25vw;
+  display: none;
+  position: absolute;
+  background-color: #07070775;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  border-radius: 0.25vw;
+  color: #ffffff8e;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: rgb(58, 58, 58);
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: transparent;
+  resize: none;
+  outline: none;
+  font-size: 24px;
+  color: white;
 }
