--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,8 +8,7 @@
 #bglayer {
   display: flex;
   flex-direction: row;
-  padding-left: 4vw;
-  padding-top: 4vh;
+  padding-top: 6vh;
   column-gap: 4vw;
 }
 
@@ -30,26 +29,28 @@
 #quotebox {
   font-size: 40px;
   color: rgb(131, 131, 131);
-  inline-size: 20vw;
+  inline-size: 25vw;
   overflow-wrap: break-word;
 }
 
 #links {
   flex-basis: auto;
   display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
   gap: 40px;
 }
 
 #customsearch {
   display: flex;
   flex-direction: row;
+  background-color: #0000004b;
+  border-radius: 2vw;
+  padding: 32px;
 }
 
 .container {
   background-color: #ffffff34;
   border-radius: 1vw;
-  height: 170px;
+  height: 190px;
   position: relative;
   transition: all 0.1s ease-in-out;
   filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03))
@@ -81,8 +82,8 @@
 }
 
 .imagecontainer {
-  height: 100px;
-  width: 100px;
+  height: 120px;
+  width: 120px;
   padding-inline: 30px;
   padding-block-start: 20px;
 }
@@ -107,7 +108,7 @@
   border-radius: 0.25vw;
   display: none;
   position: absolute;
-  background-color: #07070775;
+  background-color: #070707c9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -137,5 +138,5 @@
   resize: none;
   outline: none;
   font-size: 24px;
-  color: white;
+  color: rgb(138, 138, 138);
 }
